Fix footer logos alignement

--- a/_sass/components/logo.scss
+++ b/_sass/components/logo.scss
@@ -10,6 +10,10 @@
         height: 90px;
     }
 
+    .pw-logo-svg.pw-logo-svg_footer {
+        margin-top: -28px;
+    }
+
     .pw-logo_big .pw-logo-svg {
         width: 110px;
         height: 110px;
